--- a/assets/css/newsletter.css
+++ b/assets/css/newsletter.css
@@ -14,78 +14,62 @@ html, body {
   }
   body {
     max-height: 1500px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    line-height: 1.7;
+    margin: 0;
+    padding: 0;
   }
-  
+  /* CSS for large screens */
+
 .card-group{
   margin-top: 200px;
   display: flex;
   height: 1500px;
   flex-wrap: wrap;
+  justify-content: center;
 }
   .col{
 margin: 20px;
     width: 450px;
     height: 280px;
   }
-  .popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
-    justify-content: center;
-    align-items: center;
+  footer {
+    padding: 40px 0;
   }
   
-  .popup-content {
-    background-color:  #03a3ed;
-    padding: 20px;
-    border-radius: 5px;
-    max-width: 500px;
-    text-align: center;
+  footer .container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  footer .col-lg-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
   }
 
-  form {
-   width: 500px;
-    margin: 0 auto;
+/* Media Query for medium-sized screens */
+@media screen and (max-width: 992px) {
+  .col {
+    width: 400px;
   }
-  
-  label {
-    display: inline-block;
-    width: 100px;
-    text-align: right;
-    margin-right: 10px;
+  footer .col-lg-3 {
+    flex: 0 0 50%;
+    max-width: 50%;
   }
-  
-  input[type="text"],
-  select {
-    width: 200px;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-bottom: 10px;
-  }
-  
-  input[type="checkbox"] {
-    margin-right: 5px;
-  }
-  
-  input[type="submit"] {
-    background-color: #4CAF50;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  input[type="submit"]:hover {
-    background-color: #45a049;
-  }
+}
 
-  .hidden {
-    display: none;
+/* Media Query for small screens */
+@media screen and (max-width: 768px) {
+  .col {
+    width: 300px;
+    height: auto;
   }
+  footer .col-lg-3 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
+
   
