--- a/assets/css/programs.css
+++ b/assets/css/programs.css
@@ -1,39 +1,41 @@
-
-
-footer{
+footer {
     position: absolute;
     bottom: -15px;
     margin-top: 224px;
     z-index: 2;
-    
 }
-.programs{
+
+.programs {
     display: flex;
-    margin-top: 180px!important;
+    margin-top: 180px !important;
     border: 2px solid #03a4ed;
-    box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
     border-radius: 2rem;
     height: 400px;
     background-color: transparent;
+   
+}
 
-}
-.img{
-    width:30%;
+.img {
+    width: 30%;
     border-radius: 2rem;
+    margin: 0;
 }
-.img img{
+
+.img img {
     padding: 10px 8px;
-    height:100% ;
+    height: 100%;
     border-radius: 2rem;
-
 }
-.text{
+
+.text {
     padding: 8% 6%;
     font-size: large;
     text-align: justify;
     width: 70%;
 }
-.text h1{
+
+.text h1 {
     text-transform: uppercase;
     color: #03a4ed;
     margin-bottom: 15px;
@@ -42,3 +44,31 @@ footer{
     bottom: 70%;
 }
 
+/* Media Query for Responsive Layout */
+@media screen and (max-width: 768px) {
+    .programs {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .img {
+        width: 100%;
+    }
+
+    .img img {
+        height: auto;
+    }
+
+    .text {
+        width: 100%;
+        padding: 15px;
+    }
+
+    .text h1 {
+        bottom: 0;
+    }
+
+    footer {
+        margin-top: 0;
+    }
+}
